--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_ml_kit: ^0.16.3
   image_picker: ^1.0.7
   syncfusion_flutter_charts: ^19.4.56
+  provider: ^6.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
