--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   image_picker: ^1.0.7
   syncfusion_flutter_charts: ^19.4.56
   provider: ^6.1.2
+  shared_preferences: ^2.2.3
+  local_auth: ^2.1.8
+  local_auth_android: ^1.0.37
+  local_auth_ios: ^1.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -69,8 +73,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
