--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,11 +53,20 @@ android {
         multiDexEnabled true
     }
 
+    signingConfigs {
+        release {
+            keyAlias 'key'
+            keyPassword 'a12345'
+            storeFile file('C:\\Users\\reko8680\\key.jks')
+            storePassword 'a12345'
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
