--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   local_auth: ^2.1.8
   local_auth_android: ^1.0.37
   local_auth_ios: ^1.1.5
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
