--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,6 +63,10 @@ android {
     }
 
     buildTypes {
+        debug {
+            // No signing config needed for debug builds
+        }
+
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
